2001-01-22  Braden McDaniel  <braden@endoframe.com>

        * Added SFNode field getters/setters to VrmlNodeIFaceSet.

2001-01-21  Braden McDaniel  <braden@endoframe.com>

        * Moved definition of Route from VrmlNode.* to its own
          implementation and header files.

        * Moved VrmlNode Doxygen comments to implementation file.

        * Added getter/setter methods to VrmlNodeAppearance.

        * Moved VrmlNodeChild implementation into its own file (from
          `VrmlNode.cpp'); added copy ctor.

        * Broke VrmlNode::toChild() into const and non-const versions.

        * Added getter/setter for proxy on VrmlNodeCollision.

        * Added getters/setters for VrmlNodeElevationGrid.

        * Added getter/setter for children on VrmlNodeGroup.

2001-01-20  Braden McDaniel  <braden@endoframe.com>

        * Added getRoutes() method to VrmlNode, per patch from Joe
          HerdMan.

2001-01-19  Braden McDaniel  <braden@endoframe.com>

        * Fixed misidentified token ID constant in `Vrml97Scanner.cpp'.
          Due to a typo, the identifiers for SFColor and MFColor had
          been given the same value. Thanks to Tom Flynn for reporting
          the bug.

2001-01-14  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Update Makefiles, Project files and Workspace files to build
          (WIN32) for new OpenVRML structure.

        * Fixed undefined symbol problems while making "lookat" in
          debug mode using microsoft DevStudio.
          

2001-01-10  Braden McDaniel  <braden@endoframe.com>

        * Fixed something gcc shouldn't have allowed me to compile in
          PixelTexture rescaling. (I was trying to allocate an an array
          on the stack with a size that wasn't a const-expression.)

        * Reverted VrmlMFString's member to "char * *" from
          "const char * *". Visual C++ apparently has problems deleting
          const objects. Not sure what the standard has to say about